--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "html.format.wrapAttributes": "preserve",
     "html.format.wrapLineLength": 0,
-    "html.format.enable": false
+    "html.format.enable": false,
+    "files.eol": "\n"
 }
